feat: Add align-text option on css
And remove poker.css.
It was my mistake.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1 {
   display: none;
 }
 
+#people {
+  text-align: center;
+}
+
 #dice {
   border: 3px solid rgb(146, 144, 144);
   margin: auto;
