--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
+/*--COMMON--*/
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: #20273a;
+  font-weight: 300;
+  color: #a7a1ae;
+}
 h1 {
   text-align: center;
+  color: #fef846;
+  font-size: 50px;
+  font-weight: 400;
+}
+button {
+  height: 44px;
+  width: 80px;
+  background-color: #fb667a;
+  border: none;
+  border-radius: 10px;
+  color: #ddd;
+  font-size: 18px;
 }
 
 .hidden {
@@ -24,35 +46,37 @@ h1 {
   height: 50px;
 }
 
-#rollBtn {
-  width: 50px;
-  height: 30px;
-  margin: 10px;
-}
-
 #diceImage {
   margin: 20px auto;
 }
 
+/*--TABLE--*/
 #table {
   display: table;
   width: 70%;
-  border: 2px solid;
   margin: 20px auto;
   text-align: center;
-  line-height: 15px;
+  line-height: 18px;
 }
 .row {
   display: table-row;
 }
+.row:nth-child(even) {
+  background-color: #323c50;
+}
+.row:nth-child(odd) {
+  background-color: #2c3446;
+}
 .cell {
   display: table-cell;
   padding: 3px;
-  border-bottom: 2px solid #ddd;
-  border-right: 2px solid black;
+}
+.row .cell + .cell {
+  border-left: 2px solid #20273a;
 }
 .col1 {
   width: 1px;
+  color: #fb667a;
 }
 .col2 {
   width: 1px;
@@ -65,6 +89,6 @@ h1 {
 }
 
 #diceImage {
-  width : 100px;
-  padding : 20px;
+  width: 100px;
+  padding: 20px;
 }
