--- a/style.css
+++ b/style.css
@@ -14,14 +14,32 @@ h1 {
   font-size: 50px;
   font-weight: 400;
 }
+
+.now-turn{
+  width: 200px;
+  height: 30px;
+  margin: 10px auto 0;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 10px 10px 0 0;
+  background-color: black;
+}
+
 button {
   height: 44px;
-  width: 80px;
+  width: 100px;
   background-color: #fb667a;
   border: none;
   border-radius: 10px;
   color: #ddd;
   font-size: 18px;
+  margin-left: 1px;
+}
+
+button:hover {
+  background-color: #b14856;
 }
 
 .hidden {
