feat: change dice-table color

--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {
   background-color: #20273a;
   font-weight: 300;
   color: #a7a1ae;
+  padding: 10px;
 }
+
 h1 {
   text-align: center;
   color: #fef846;
@@ -15,16 +17,21 @@ h1 {
   font-weight: 400;
 }
 
-.now-turn{
-  width: 200px;
+.nowTurn{
+  width: 250px;
   height: 30px;
-  margin: 10px auto 0;
-  color: white;
+  letter-spacing: 3px;
+  color: #20273a;
   font-weight: bold;
   text-align: center;
   line-height: 30px;
-  border-radius: 10px 10px 0 0;
-  background-color: black;
+  border-radius: 10px 10px;
+  background-color: rgb(236, 224, 56);
+  margin: 20px auto 10px;
+}
+
+.inputTable {
+  text-align: center;
 }
 
 button {
@@ -33,9 +40,9 @@ button {
   background-color: #fb667a;
   border: none;
   border-radius: 10px;
-  color: #ddd;
+  color: rgba(255, 255, 255, 0.849);
   font-size: 18px;
-  margin-left: 1px;
+  margin: 1px;
 }
 
 button:hover {
@@ -52,11 +59,12 @@ button:hover {
 
 #dice-table {
   text-align: center;
-  margin: 0 auto;
-  padding: 20px 20px;
+  line-height: 250px;
+  margin: 10px auto 0;
   width: 300px;
   height: 250px;
   border: 1px solid peachpuff;
+  background-color: white;
 }
 
 .pig-image {
