--- a/style.css
+++ b/style.css
@@ -8,13 +8,28 @@ body {
   font-weight: 300;
   color: #a7a1ae;
   padding: 10px;
+
 }
 
-h1 {
+body > .title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title > h1 {
   text-align: center;
   color: #fef846;
   font-size: 50px;
   font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.title > h5 {
+  text-align: center;
+  min-width: 300px;
+  max-width: 400px;
+  line-height: 20px;
 }
 
 .nowTurn{
@@ -28,6 +43,14 @@ h1 {
   border-radius: 10px 10px;
   background-color: rgb(236, 224, 56);
   margin: 20px auto 10px;
+}
+
+body > #status > div {
+  text-align: center;
+  color: #fef846;
+  font-size: 100px;
+  font-weight: 900;
+  margin-bottom: 20px;
 }
 
 .inputTable {
@@ -79,7 +102,7 @@ button:hover {
 /*--TABLE--*/
 #table {
   display: table;
-  width: 70%;
+  width: 400px;
   margin: 20px auto;
   text-align: center;
   line-height: 18px;
